fix for scrollbar width css variable being undefined

--- a/scss/griddle-overlay.scss
+++ b/scss/griddle-overlay.scss
@@ -1,3 +1,11 @@
+:root {
+  --scrollbar-width: 0px;
+}
+
+html:not([data-griddle-booted="true"]) {
+  overflow-x: hidden;
+}
+
 .griddle-container {
   @include overlay();
 
